# OBJViewer

./: CMakeLists.txt  HalfEdge.cpp  HalfEdge.h  objviewer.cpp
shaders/: objviewer.frag  objviewer.vert
utils/: shader.cpp  shader.h
